FlightPath 6.x Changelog
========================

2022-05-13
  Made small alteration in DegreePlan, so that if a degree title is blank, we don't see a message like "This groups belongs to" (with no degree
  title) in the Courses Added by Advisor group.
  

2022-05-11
  Added concept of "admin_restricted" to permissions.  If set, then it will only appear for the admin user (user_id = 1).  This way
  you can give the "edit permissions" permission to users and still not let them access the potentially dangerous areas.
  
  Masquerade will not allow a user to become admin (user id 1).


2022-05-08
  Fixed logic in advise module where number of advised students for a particular course were not being calculated correctly.
  

2022-05-06
  Tweaks in user.module to make custom attributes more configurable.
  

2022-05-04
  Changed wording of setting in system.module.
  

2022-05-03
  Modified user.module so that defining user attributes is easier; it will assume it's a textfield and name "value" if no field or
  display information is given.


2022-04-29
  Modified function csv_multiline_to_array to make it smarter and not throw warnings so easily.
  

2022-04-27
  Modified the email sent out by a db_error to include the query/args, to make it easier to debug.
  
  Removed jquery ui's package.json file to prevent github from flagging unsafe dependencies (which are not being used)
  

2022-04-18
  If a semester block is empty, we do not show it on the degree / what if tabs.
  

2022-04-17
  Made it so that the theme always defaults to fp6_clean (included with core), and it is not set in the settings file.  Got rid of the
  "display_mysql_errors" line in settings.php, since it is not used any longer anyway.
  

2022-04-16
  Added code to lengthen timeout during cron runs.
  
  Added code to content module to delete content (and files) marked with delete_flag = 1.  Same for advise module, admin, and comments modules.
  