@@ -50,10 +50,72 @@ function alerts_menu() {
     ),
   );
     
+    
+  // Settings screen
+  $items["admin/config/alerts-settings"] = array(
+    "title" => "Alerts settings",                                                
+    "description" => "Configure settings for Alerts in the system",
+    "page_callback" => "fp_render_form",
+    "page_arguments" => array("alerts_settings_form", "system_settings"),
+    "access_arguments" => array("administer_alerts"),
+    "page_settings" => array(                                        
+      "page_hide_report_error" => TRUE,
+      "menu_links" => array(                    
+        0 => array(                                               
+          "text" => "Admin Console",                   
+          "path" => "admin-tools/admin",                                                           
+        ),                                                                         
+      ),
+      "menu_icon" => fp_get_module_path('system') . "/icons/bell.png",                                                               
+    ),    
+    "type" => MENU_TYPE_NORMAL_ITEM,            
+    "tab_parent" => "admin-tools/admin",    
+  );
+    
   
   
   return $items;
 }
+
+
+function alerts_settings_form($school_id = 0) {
+  $form = array();
+  
+  $school_id = intval($school_id);
+  
+  $fs = "";  // The field name suffix.  We will add this to the end of all of our field names.  If this is the default school, leave blank.
+  if (module_enabled("schools")) {
+    $school_name = schools_get_school_name_for_id($school_id);
+    fp_set_title(t("Configure %school Alerts settings", array('%school' => $school_name)));
+    if ($school_id !== 0) {
+      $fs = "~~school_" . $school_id;
+    }
+  }
+  
+  $form['school_id'] = array(
+    'type' => 'hidden',
+    'value' => $school_id,
+  );  
+  
+  
+  $form['alerts_tags' . $fs] = array(
+    'label' => t("Tags"),
+    'type' => 'textarea',
+    'value' => variable_get_for_school("alerts_tags", "", $school_id, TRUE),
+    'description' => t("These are tags wich may be selected when creating a new Alert.
+                        Enter tags one per line.  For example: 
+                        <br> &nbsp; Academics<br> &nbsp; Financial Aid<br> &nbsp; English"),
+    
+  );
+    
+    
+  
+  return $form;
+}
+
+
+
+
 
 
 
@@ -77,6 +139,79 @@ function alerts_menu_handle_replacement_pattern($str) {
   
   return $str;
 }
+
+
+
+
+/**
+ * Implements hook_get_count_for_alert_type
+ * 
+ * Set and Return back "unread" (not in content_last_access)
+ * 
+ */
+function alerts_get_alert_count_by_type($account = NULL) {
+  global $user;
+  if ($account === NULL) $account = $user;
+  
+  if ($account->id == 0) return FALSE;
+  
+  $rtn = array();
+  $types = array('alert'); 
+  
+  // We need to know this user's list of advisees.
+  $advisees = advise_get_advisees($account->cwid);
+  $advisee_line = "";
+  if ($advisees && count($advisees) > 0) {
+    
+    $advisees_list = "'" . join("','", $advisees) . "'";
+    
+    $advisee_line = " AND b.field__student_id IN (" . $advisees_list . ") ";
+  }
+  else {  // No advisees!  So, no readon to do this query at all.
+    return FALSE;
+  }
+  
+  
+  foreach ($types as $type) {
+        
+    $total_count = db_result(db_query("SELECT COUNT(*) as mycount 
+                      FROM content__$type b,                                            
+                           content n
+                     WHERE n.type = ?
+                     AND n.published = 1
+                     AND n.delete_flag = 0
+                     AND b.vid = n.vid
+                     AND b.cid = n.cid
+                     $advisee_line ", array($type))); 
+    
+    
+    $read_count = db_result(db_query("SELECT COUNT(*) as mycount 
+                      FROM content_last_access a,
+                           content__$type b,                                            
+                           content n
+                     WHERE n.type = ?
+                     AND n.published = 1
+                     AND n.delete_flag = 0
+                     AND n.cid = a.cid                     
+                     AND b.vid = n.vid
+                     AND n.cid = b.cid
+                     $advisee_line
+                     AND a.user_id = ?", array($type, $account->id)));
+    
+    
+    $rtn[$type]['total'] = intval($total_count);
+    $rtn[$type]['read'] = intval($read_count);
+    $rtn[$type]['unread'] = $total_count - $read_count; 
+        
+    // TODO:  A setting such that "read" is actually "closed" and "unread" means "open".    
+        
+        
+  } // foreach types 
+  
+  return $rtn;
+  
+} // alerts_get_alert_count_by_type
+
 
 
 
@@ -375,72 +510,6 @@ function alerts_advisees_alerts_form_submit($form, $form_state) {
 
 
 
-/**
- * Implements hook_get_count_for_alert_type
- * 
- * Set and Return back "unread" (not in content_last_access)
- * 
- */
-function alerts_get_alert_count_by_type($account = NULL) {
-  global $user;
-  if ($account === NULL) $account = $user;
-  
-  if ($account->id == 0) return FALSE;
-  
-  $rtn = array();
-  $types = array('alert', /*'activity_record'*/); 
-  
-  // We need to know this user's list of advisees.
-  $advisees = advise_get_advisees($account->cwid);
-  $advisee_line = "";
-  if ($advisees && count($advisees) > 0) {
-    
-    $advisees_list = "'" . join("','", $advisees) . "'";
-    
-    $advisee_line = " AND b.field__student_id IN (" . $advisees_list . ") ";
-  }
-  else {  // No advisees!  So, no readon to do this query at all.
-    return FALSE;
-  }
-  
-  
-  foreach ($types as $type) {
-        
-    $total_count = db_result(db_query("SELECT COUNT(*) as mycount 
-                      FROM content__$type b,                                            
-                           content n
-                     WHERE n.type = ?
-                     AND n.published = 1
-                     AND n.delete_flag = 0
-                     AND b.vid = n.vid
-                     AND b.cid = n.cid
-                     $advisee_line ", array($type))); 
-    
-    
-    $read_count = db_result(db_query("SELECT COUNT(*) as mycount 
-                      FROM content_last_access a,
-                           content__$type b,                                            
-                           content n
-                     WHERE n.type = ?
-                     AND n.published = 1
-                     AND n.delete_flag = 0
-                     AND n.cid = a.cid                     
-                     AND b.vid = n.vid
-                     AND n.cid = b.cid
-                     $advisee_line
-                     AND a.user_id = ?", array($type, $account->id)));
-    
-    
-    $rtn[$type]['total'] = intval($total_count);
-    $rtn[$type]['read'] = intval($read_count);
-    $rtn[$type]['unread'] = $total_count - $read_count; 
-        
-  } // foreach types 
-  
-  return $rtn;
-  
-} // alerts_get_alert_count_by_type
-
 
 
 
@@ -449,6 +518,9 @@ function alerts_get_alert_count_by_type($account = NULL) {
  * for use with this module.
  */
 function alerts_content_register_content_type() {
+  global $current_student_id;
+  $school_id = db_get_school_id_for_student_id($current_student_id);    
+    
   
   $arr = array();
   
@@ -520,17 +592,13 @@ function alerts_content_register_content_type() {
     'weight' => 40,
   );
 
-
-  $fields['department'] = array(
-    'type' => 'select',
-    'label' => 'Department',    
-    'hide_please_select' => TRUE,
-    'options' => array(
-      'default' => t("Default/None"),
-      'finaid' => t('Financial Aid'),
-      'reg' => t('Registrar'),
-      'stu_aff' => t('Student Affairs'),      
-    ),
+  
+    
+  $options = csv_to_form_api_array(variable_get_for_school('alerts_tags', '', $school_id), "\n");
+  $fields['tags'] = array(
+    'type' => 'checkboxes',
+    'options' => $options,
+    'label' => 'Tags',
     'weight' => 60,
   );  
 
@@ -660,6 +728,10 @@ if ($form_id == 'content_edit_content_form') {
 
 function alerts_perm() {
   return array(
+    'administer_alerts' => array(
+      'title' => t('Administer Alerts Settings'),
+      'description' => t('The user may configure various settings involving Alerts in the system.'),      
+    ),
     'can_view_alerts' => array(
       'title' => t('Can view Alerts'),
       'description' => t('The user may view alerts (only "Anyone" by default)'),      
